[package]
name = "winapi-zig"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A script to translate winapi-rs definitions into Zig"
readme = "README.md"
edition = "2018"

[dependencies]
colored = "1.7"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[dependencies.syn]
version = "1.0.42"
default-features = false
features = ["parsing", "full", "extra-traits"]
